issues/18 - Fixed StoredVersionContractByHash scenario